[package]
edition = "2021"
name = "sample-umdf-driver"
version = "0.1.0"
description = "A sample UMDF driver that demonstrates UMDF in RUST"
repository = "https://github.com/microsoft/windows-drivers-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "driver", "sample", "example", "wdf"]
categories = ["hardware-support"]
publish = false

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 31

[lib]
crate-type = ["cdylib"]
# Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
test = false

[build-dependencies]
wdk-build = { path = "../../crates/wdk-build", version = "0.2.0" }

[dependencies]
wdk = { path = "../../crates/wdk", version = "0.2.0" }
wdk-sys = { path = "../../crates/wdk-sys", version = "0.2.0" }

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[profile.dev]
lto = true

[profile.release]
lto = true

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Individual Lints
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks = "forbid"
unnecessary_safety_doc = "forbid"

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"
