[package]
description = "An empty package that sets the `package.metadata` required for wdk-build to generate UMDF bindings for Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "config-umdf"
publish = false
version = "0.1.0"

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
target-umdf-version-minor = 33
umdf-version-major = 2

[lib]

[dev-dependencies]
wdk-macros-tests.path = "../wdk-macros-tests"
wdk-sys.path = "../../crates/wdk-sys"

[features]
nightly = ["wdk-sys/nightly"]
