[workspace]
members = ["crates/*"]
resolver = "2"

# This workspace is used as a test for workspace-level WDK metadata configuration in cargo workspace that also contains non-WDK packages
[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[workspace.dependencies]
wdk.path = "../../crates/wdk"
wdk-alloc.path = "../../crates/wdk-alloc"
wdk-build.path = "../../crates/wdk-build"
wdk-macros.path = "../../crates/wdk-macros"
wdk-panic.path = "../../crates/wdk-panic"
wdk-sys.path = "../../crates/wdk-sys"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
