[workspace]
members = ["crates/*"]
resolver = "2"

# This workspace is used as a test for workspace-level WDK metadata configuration
[workspace.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 33

[workspace.dependencies]
wdk.path = "../../crates/wdk"
wdk-alloc.path = "../../crates/wdk-alloc"
wdk-build.path = "../../crates/wdk-build"
wdk-macros.path = "../../crates/wdk-macros"
wdk-panic.path = "../../crates/wdk-panic"
wdk-sys.path = "../../crates/wdk-sys"

[profile.dev]
lto = true

[profile.release]
lto = true
