[package]
edition = "2021"
name = "wdk-macros-tests"
version = "0.1.0"
description = "Package to provides wdk configuration-specific tests for the wdk-macros crate."
license = "MIT OR Apache-2.0"
publish = false

[lib]

[dependencies]
fs4 = { version = "0.8.4", features = ["sync"] }
lazy_static = "1.5.0"
macrotest = "1.0.13"
owo-colors = "4.0.0"
paste = "1.0.15"
pathdiff = "0.2.1"
rustversion = "1.0.17"
trybuild = "1.0.97"
