[package]
edition = "2021"
name = "wdk-macros-tests"
version = "0.1.0"
description = "Package to provides wdk configuration-specific tests for the wdk-macros crate."
license = "MIT OR Apache-2.0"
publish = false

[lib]

[dependencies]
fs4 = { version = "0.13.1", features = ["sync"] }
macrotest = "1.2.0"
owo-colors = "4.2.0"
paste = "1.0.15"
pathdiff = "0.2.3"
rustversion = "1.0.20"
trybuild = "1.0.104"
