[package]
edition = "2021"
name = "wdk-sys-tests"
version = "0.1.0"
description = "Tests for wdk-sys that rely on there being a WDM, KMDF, or UMDF config enabled"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]

[dependencies]
wdk-sys = { path = "../../crates/wdk-sys" }
