[package]
description = "Tests for wdk-sys that rely on there being a WDM, KMDF, or UMDF config enabled"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "wdk-sys-tests"
publish = false
version = "0.1.0"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]

[dependencies]
wdk-sys = { path = "../../crates/wdk-sys" }
