[package]
name = "umdf-driver"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 33

[lib]
crate-type = ["cdylib"]

[build-dependencies]
wdk-build = { path = "../../../../crates/wdk-build" }

[dependencies]
wdk = { path = "../../../../crates/wdk" }
wdk-sys = { path = "../../../../crates/wdk-sys" }

[workspace]
