[package]
name = "wdm-driver"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
wdk-build = { path = "../../../../crates/wdk-build" }

[dependencies]
wdk-alloc = { path = "../../../../crates/wdk-alloc" }
wdk-panic = { path = "../../../../crates/wdk-panic" }
wdk-sys = { path = "../../../../crates/wdk-sys" }

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace]
